--- a/index.html
+++ b/index.html
@@ -4,36 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Js-workspace-part2</title>
+    <link rel="stylesheet" href="./css/stail.css" />
   </head>
   <body>
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a class="nav-item-link" href="">О нас</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-item-link" href="">Портфолио</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-item-link" href="">Контакты</a>
-      </li>
+    <h2>Js-workspace-part2</h2>
+    <ul>
+      <li><a href="./lesson-11-12.html">lesson-11-12</a></li>
+      <li><a href="./lesson-13.html">lesson-13</a></li>
+      <li><a href="./lesson-13-colorpicker.html">lesson-13-colorpicker</a></li>
+      <li><a href="./lesson-14.html">lesson-14</a></li>
     </ul>
-
-    <h1 class="title">Всё про меня</h1>
-    <img class="nos" src="./img/nos1.jpg" alt="" height="200" />
-    <input type="text" class="js-input" />
-    <button class="btn">Магическая кнопка</button>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae nobis optio ducimus,
-      ipsum culpa quo voluptates, ad quidem dolorem itaque consequatur maiores corporis error
-      placeat laboriosam doloremque minima, sunt mollitia.
-    </p>
-    <div class="js-action">
-      <button type="button" data-action="add">Создать</button>
-      <button type="button" data-action="remove">Удалить</button>
-      <button type="button" data-action="edit">Редактировать</button>
-    </div>
-
-    <script src="./js/lessons/lesson-9-10.js" type="module"></script>
   </body>
 </html>
